--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
@@ -12,15 +12,18 @@
         <tr [ngStyle]="columnStyle ? columnStyle.header : null" >
           <th *ngFor="let header of model.headers" [title]="header.desc">
             {{ header.text }}
-            <div class="sort" [ngStyle]="columnStyle ? columnStyle.headerSortButton : null">
-              <button (click)="model.sortColumn(header.prop, 'asc')">
+            <div class="sort" [ngStyle]="columnStyle ? columnStyle.headerButton : null">
+              <button (click)="model.sortColumn(header.prop, 'asc')" class="up"  [ngStyle]="columnStyle ? columnStyle.headerSortButton : null">
                 <i class="fa fa-sort-asc"></i>
               </button>
-              <button (click)="model.sortColumn(header.prop, 'desc')">
+              <button (click)="model.sortColumn(header.prop, 'desc')" class="down"  [ngStyle]="columnStyle ? columnStyle.headerSortButton : null">
                 <i class="fa fa-sort-desc"></i>
               </button>
             </div>
-            <button (click)="model.removeColumn(header.prop)" class="btn btn-sm btn-warning" *ngIf="reArrangeColumns">
+            <button (click)="model.removeColumn(header.prop)"
+                    class="rearrange"
+                    [ngStyle]="columnStyle ? columnStyle.headerRemoveButton : null"
+                    *ngIf="reArrangeColumns">
               <i class="fa fa-remove"></i>
             </button>
           </th>
