--- a/src/app/components/widgetdemo/widgets/griddemo.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemo.component.html
@@ -6,28 +6,53 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <app-minitabs #tabs></app-minitabs>
+  <div class="row" *ngIf="tabs.tabSelected == 'info'">
+    <div class="col-12"></div>
+  </div>
+  <div class="row" *ngIf="tabs.tabSelected == 'code'">
     <div class="col-12">
-      <form>
-        <fieldset>
-          <legend>Grid Features</legend>
-          <div class="form-group">
-            <label>Columns visibility</label>
-            <input type="checkbox" checked="true" #reArrangeColumns />
-          </div>
-        </fieldset>
-      </form>
+      <p>
+        The grid is defined in the form like this:
+      </p>
+      <pre>
+&lt;ac-datagrid [model]="model"
+                [showActions]="showActions"
+                [reArrangeColumns]="reArrangeColumns">&lt;/ac-datagrid>
+    </pre
+      >
+      <p>The values <code>showActions</code> and <code>reArrangeColumns</code> are being set by the checkboxes.</p>
+      <ul>
+        <li>
+          <code>showActions</code>: Show the action button column, the buttons 'Edit' and 'Delete' fire appropriate events. The do actually not change
+          the data, one must manipulate the model accordingly.
+        </li>
+        <li><code>reArrangeColumns</code>: Shows a remove button on the columns and allows adding columns dynamically.</li>
+      </ul>
     </div>
   </div>
-  <div class="row" *ngIf="reArrangeColumns.value">
+  <div class="row" *ngIf="tabs.tabSelected == 'demo'">
     <div class="col-12">
+      <fieldset>
+        <legend>Grid Features</legend>
+        <form #f="ngForm" novalidate>
+          <div class="form-group">
+            <input class="form-check-input" type="checkbox" [(ngModel)]="showActions" checked="true" #show name="show" />
+            <label class="form-check-label">Show Actions</label>
+          </div>
+          <div class="form-group">
+            <input class="form-check-input" type="checkbox" [(ngModel)]="reArrangeColumns" checked="true" #reArrange name="reArrange" />
+            <label class="form-check-label">Add/Remove Columns</label>
+          </div>
+        </form>
+      </fieldset>
       <p>
         Currently invisible columns. Click to add:
         <span *ngFor="let col of model.headersNotVisible; let l = last">
           <button class="btn btn-xs btn-danger" (click)="model.addColumn(col.prop)">Add {{ col.text }}</button> </span
         >&nbsp;
       </p>
-      <ac-datagrid [model]="model"></ac-datagrid>
+      <ac-datagrid [model]="model" [showActions]="showActions" [reArrangeColumns]="reArrangeColumns"></ac-datagrid>
     </div>
   </div>
 </div>
