--- a/src/app/components/ui/tabs/tabs/tabs.component.html
+++ b/src/app/components/ui/tabs/tabs/tabs.component.html
@@ -1,17 +1,16 @@
 <ul class="nav nav-tabs" role="tablist">
-  <li class="nav-item" *ngFor="let tab of tabs.tabs" [ngClass]="{ active: tab.active }">
+  <li class="nav-item" *ngFor="let tab of tabs.tabs">
     <a
       class="nav-link "
       *ngIf="!tab.disabled; else muted"
-      (click)="activateTab(tab)"
-      [ngClass]="{ active: tab.active }"
       href="#"
       [routerLink]="tab.link"
+      [routerLinkActive]="'active'"
       role="tab"
       >{{ tab.text }}</a
     >
     <ng-template #muted>
-      <a class="nav-link text-muted" href="#" disabled="disabled" onclick="return false;" role="tab">{{ tab.text }}</a>
+      <a class="nav-link text-muted" href="#" disabled="disabled" [routerLink]="" role="tab">{{ tab.text }}</a>
     </ng-template>
   </li>
 </ul>
