--- a/src/app/components/widgetdemo/widgets/treeviewdemo.component.html
+++ b/src/app/components/widgetdemo/widgets/treeviewdemo.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-12">
       <div class="alert alert-info">
-        The treeview can held any tree of nodes, which can be styles, linked, and bound to events. Click the <b>+</b>sign to open the tree and
-        manipulate the nodes' appearance. Clicking on the items fires various events shown on the right.
+        The treeview can held any tree of nodes, which can be styles, linked, and bound to events. Clicking on the items fires various events shown on
+        the right.
       </div>
       <app-minitabs #tabs></app-minitabs>
       <div *ngIf="tabs.tabSelected == 'info'">
@@ -13,8 +13,27 @@
         </p>
         <pre>
 &lt;ac-treeview [nodes]="treeData">&lt;/ac-treeview>
-</pre
-        >
+        </pre>
+        <p>
+          The following events fire:
+        </p>
+        <ul>
+          <li><code>(nodeClick)</code>: The icon or an not selectable node text has been clicked</li>
+          <li><code>(checkChanged)</code>: If the node has a checkbox, the status of the checkbox changed</li>
+          <li><code>(selectedChanged)</code>: If the node is selectable (invert colors), the node has been selected</li>
+          <li><code>(collapseChanged)</code>: If the node is collapsable (has child nodes), it has been opened or closed</li>
+        </ul>
+        <p>
+          The events just provide the information, that something has been changed. After that, one must retrieve the actual state of a node by asking
+          several properties:
+        </p>
+        <ul>
+          <li><code>stateIsExpandend </code>: A collapsable node is expanded (shows children)</li>
+          <li><code>stateIsChecked </code>: A checkable node is checked</li>
+          <li><code>stateIsDisabled </code>: The node is disabled (and may not fire certain events)</li>
+          <li><code>stateIsSelected </code>: A selectable node is currently selected</li>
+          <li><code>state</code>: An numeric expression of all states (internally, an Enum)</li>
+        </ul>
       </div>
       <div class="alert alert-primary" *ngIf="tabs.tabSelected == 'code'">
         The code used in this demo looks like this.
@@ -53,6 +72,15 @@ this.treeData = new AcTextTreeNode('Root node', options, [
 
   <div class="row" *ngIf="tabs.tabSelected == 'demo'">
     <div class="col-6">
+      States of the current node '{{ eventSource.name }}':
+      <ul *ngIf="eventSource">
+        <li><code>stateIsExpandend: </code>{{ eventSource.stateIsExpandend }}</li>
+        <li><code>stateIsChecked:</code> {{ eventSource.stateIsChecked }}</li>
+        <li><code>stateIsDisabled:</code> {{ eventSource.stateIsDisabled }}</li>
+        <li><code>stateIsSelected:</code> {{ eventSource.stateIsSelected }}</li>
+        <li><code>state:</code> {{ eventSource.state }}</li>
+      </ul>
+      <hr />
       <ac-tree
         [nodes]="treeData"
         (nodeClick)="nodeEvent('click', $event)"
@@ -63,6 +91,7 @@ this.treeData = new AcTextTreeNode('Root node', options, [
       </ac-tree>
     </div>
     <div class="col-6">
+      <button type="button" class="btn btn-md btn-light" (click)="eventLog = []">Clear list</button>
       <code>
         <ul class="list-unstyled">
           <li *ngFor="let log of eventLog">{{ log }}</li>
