--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
   <a class="navbar-brand" href="/index.html"
     ><img src="/assets/images/logo.png" />
-    <h1>SVOGV</h1>
+    <h1 class="pull-right">SVOGV</h1>
   </a>
 </nav>
 <div class="container-fluid" id="main">
