--- a/src/app/components/widgetdemo/widgets/griddemosimple.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemosimple.component.html
@@ -9,31 +9,43 @@
   <app-minitabs #tabs></app-minitabs>
   <div class="row" *ngIf="tabs.tabSelected == 'info'">
     <div class="col-12">
-      <p>
-        This example shows simple styling of the grid using colors. One can style the various parts:
-      </p>
-      <ul>
-          <li><code>first</code>: The first column</li>
-          <li><code>middle</code>: All except first and last</li>
-          <li><code>last</code>: The last column</li>
-          <li><code>group</code>: </li>
-          <li><code>header</code>: The header row</li>
-          <li><code>headerButton</code>: The container for all header cell buttons</li>
-          <li><code>headerSortButton</code>: The two sort buttons (up/down)</li>
-          <li><code>headerRemoveButton</code>: The column remove button</li>
-          <li><code>footer</code>: the footer area</li>
-          <li><code>actionCell</code>: The cell with the action buttons</li>
-      </ul>
-      <p>One can apply any regular styles, such as <code>'background-color'</code>.</p>
-      <p>
-        The data handling is controlled by the model itself, using decorators.
-      </p>
+      <div class="card card-block clearfix">
+        <div class="card-header card-info">
+          Common Features of Grid Component
+        </div>
+        <div class="card-body">
+          <p>
+            This example shows simple styling of the grid using colors. One can style the various parts:
+          </p>
+          <ul>
+            <li><code>first</code>: The first column</li>
+            <li><code>middle</code>: All except first and last</li>
+            <li><code>last</code>: The last column</li>
+            <li><code>group</code>:</li>
+            <li><code>header</code>: The header row</li>
+            <li><code>headerButton</code>: The container for all header cell buttons</li>
+            <li><code>headerSortButton</code>: The two sort buttons (up/down)</li>
+            <li><code>headerRemoveButton</code>: The column remove button</li>
+            <li><code>footer</code>: the footer area</li>
+            <li><code>actionCell</code>: The cell with the action buttons</li>
+          </ul>
+          <p>One can apply any regular styles, such as <code>'background-color'</code>.</p>
+          <p>
+            The data handling is controlled by the model itself, using decorators.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row" *ngIf="tabs.tabSelected == 'code'">
     <div class="col-12">
-      <p>The grid in demo is using this code:</p>
-      <pre>
+      <div class="card card-block clearfix">
+        <div class="card-header card-info">
+          Common Features of Grid Component
+        </div>
+        <div class="card-body">
+          <p>The grid in demo is using this code:</p>
+          <pre>
 &lt;ac-datagrid [model]="model"
              [showActions]="false"
              [columnStyle]="{{ '{' }} footer: {{ '{' }} 'background-color': 'silver' },
@@ -42,10 +54,10 @@
                               headerSortButton: {{ '{' }} color: 'yellow' }
                              }" &gt;
 &lt;/ac-datagrid&gt;</pre
-      >
-      <p>It shows how to change the styles of the particular parts of the grid.</p>
-      <p>The data are coming from the following model:</p>
-      <pre>
+          >
+          <p>It shows how to change the styles of the particular parts of the grid.</p>
+          <p>The data are coming from the following model:</p>
+          <pre>
 import * as Validator from 'svogv';
 import {{ '{' }} PercentPipe } from './pipe/percent.pipe';
 
@@ -83,15 +95,17 @@ export class UserViewModelList {{ '{' }}
   active ? = false;
 
 }</pre
-      >
-      <p>
-        Not all decorators are relevant for tables, some support the integrated editors. Especially useful for tables are:
-      </p>
-      <ul>
-        <li><code>Display</code>: The name of the title (header cell) and tooltip</li>
-        <li><code>FormatPipe</code>: A pipe applied to all values before showing</li>
-        <li><code>Hidden</code>: The property does not render in the table</li>
-      </ul>
+          >
+          <p>
+            Not all decorators are relevant for tables, some support the integrated editors. Especially useful for tables are:
+          </p>
+          <ul>
+            <li><code>Display</code>: The name of the title (header cell) and tooltip</li>
+            <li><code>FormatPipe</code>: A pipe applied to all values before showing</li>
+            <li><code>Hidden</code>: The property does not render in the table</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row" *ngIf="tabs.tabSelected == 'demo'">
