--- a/docs/documentation/components/DataGridPaginationComponent.html
+++ b/docs/documentation/components/DataGridPaginationComponent.html
@@ -702,6 +702,9 @@ all relevant data must be loaded first.</p>
                             <li>
                                 <a href="#maxPageIndex">maxPageIndex</a>
                             </li>
+                            <li>
+                                <a href="#size">size</a>
+                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -745,6 +748,30 @@ all relevant data must be loaded first.</p>
                             <tr>
                                 <td class="col-md-2" colspan="2">
                                     <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:19</a></div>
+                                </td>
+                            </tr>
+                </tbody>
+            </table>
+            <table class="table table-sm table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="col-md-2">
+                            <a name="size"></a>
+                            <code>size</code>
+                        </td>
+                        <td class="col-md-10">
+                            <div><p>The size for pagination, according bootstrap rules. (&#39;sm&#39; == &#39;pagination-sm&#39;, &#39;lg&#39; = &#39;pagination-lg&#39;).
+Default is medium.</p>
+</div>
+                              <p>
+                                <em>Type:</em>    <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                              </p>
+                        </td>
+                    </tr>
+                            <tr>
+                                <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:30</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -800,7 +827,7 @@ all relevant data must be loaded first.</p>
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:32</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:38</a></div>
                                 </td>
                             </tr>
     
@@ -861,7 +888,7 @@ all relevant data must be loaded first.</p>
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:28</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:34</a></div>
                                 </td>
                             </tr>
     
@@ -893,7 +920,7 @@ all relevant data must be loaded first.</p>
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:64</a></div>
                                 </td>
                             </tr>
     
@@ -963,7 +990,7 @@ all relevant data must be loaded first.</p>
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:45</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:51</a></div>
                                 </td>
                             </tr>
     
@@ -1045,7 +1072,7 @@ all relevant data must be loaded first.</p>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:26</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:32</a></div>
                                 </td>
                             </tr>
     
@@ -1074,7 +1101,7 @@ all relevant data must be loaded first.</p>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:75</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:81</a></div>
                                 </td>
                             </tr>
     
@@ -1103,7 +1130,7 @@ all relevant data must be loaded first.</p>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:66</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.ts:72</a></div>
                                 </td>
                             </tr>
     
@@ -1139,6 +1166,12 @@ export class DataGridPaginationComponent implements OnInit, OnChanges {
    * An event fired once the user has changed the page by clicking a button.
    */
   @Output() pageNumberChanged &#x3D; new EventEmitter();
+
+  /**
+   * The size for pagination, according bootstrap rules. (&#x27;sm&#x27; &#x3D;&#x3D; &#x27;pagination-sm&#x27;, &#x27;lg&#x27; &#x3D; &#x27;pagination-lg&#x27;).
+   * Default is medium.
+   */
+  @Input() size: string;
 
   currentPageNumber &#x3D; 1;
 
@@ -1199,31 +1232,31 @@ export class DataGridPaginationComponent implements OnInit, OnChanges {
 
     <div class="tab-pane fade" id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div&gt;
-  &lt;ul class&#x3D;&quot;pagination float-right&quot;&gt;
-    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; 1 || !maxPageIndex&quot;&gt;
-      &lt;a href (click)&#x3D;&quot;setCurrentPage(1, $event)&quot; aria-label&#x3D;&quot;Previous&quot;&gt;
+  &lt;ul class&#x3D;&quot;pagination float-right&quot; [ngClass]&#x3D;&quot;{ &#x27;pagination-sm&#x27;: size &#x3D;&#x3D; &#x27;sm&#x27;, &#x27;pagination-lg&#x27;: size &#x3D;&#x3D; &#x27;lg&#x27; }&quot;&gt;
+    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; 1 || !maxPageIndex&quot; class&#x3D;&quot;page-item&quot;&gt;
+      &lt;a href (click)&#x3D;&quot;setCurrentPage(1, $event)&quot; aria-label&#x3D;&quot;Previous&quot; class&#x3D;&quot;page-link&quot;&gt;
         &lt;span aria-hidden&#x3D;&quot;true&quot;&gt;«&lt;/span&gt;
       &lt;/a&gt;
     &lt;/li&gt;
-    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; 1 || !maxPageIndex&quot;&gt;
+    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; 1 || !maxPageIndex&quot; class&#x3D;&quot;page-item&quot;&gt;
       &lt;a
         href
         aria-label&#x3D;&quot;Previous&quot;
         (click)&#x3D;&quot;setCurrentPage(currentPageNumber - 1, $event)&quot;
-      &gt;
+        class&#x3D;&quot;page-link&quot;&gt;
         &lt;span aria-hidden&#x3D;&quot;true&quot;&gt;‹&lt;/span&gt;
       &lt;/a&gt;
     &lt;/li&gt;
     &lt;li
       *ngFor&#x3D;&quot;let index of range(pageStartNumber, pageEndNumber)&quot;
       [class.active]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; index&quot;
-    &gt;
-      &lt;a href (click)&#x3D;&quot;setCurrentPage(index, $event)&quot;&gt;
+      class&#x3D;&quot;page-item&quot;&gt;
+      &lt;a href (click)&#x3D;&quot;setCurrentPage(index, $event)&quot; class&#x3D;&quot;page-link&quot;&gt;
         &lt;span aria-hidden&#x3D;&quot;true&quot;&gt;{{ index }}&lt;/span&gt;
       &lt;/a&gt;
     &lt;/li&gt;
     &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; maxPageIndex || !maxPageIndex&quot;&gt;
-      &lt;a
+      &lt;a class&#x3D;&quot;page-link&quot;
         href
         (click)&#x3D;&quot;setCurrentPage(currentPageNumber + 1, $event)&quot;
         aria-label&#x3D;&quot;Last&quot;
@@ -1231,8 +1264,8 @@ export class DataGridPaginationComponent implements OnInit, OnChanges {
         &lt;span aria-hidden&#x3D;&quot;true&quot;&gt;›&lt;/span&gt;
       &lt;/a&gt;
     &lt;/li&gt;
-    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; maxPageIndex || !maxPageIndex&quot;&gt;
-      &lt;a href (click)&#x3D;&quot;setCurrentPage(maxPageIndex, $event)&quot; aria-label&#x3D;&quot;Last&quot;&gt;
+    &lt;li [class.disabled]&#x3D;&quot;currentPageNumber &#x3D;&#x3D;&#x3D; maxPageIndex || !maxPageIndex&quot; class&#x3D;&quot;page-item&quot;&gt;
+      &lt;a href (click)&#x3D;&quot;setCurrentPage(maxPageIndex, $event)&quot; aria-label&#x3D;&quot;Last&quot; class&#x3D;&quot;page-link&quot;&gt;
         &lt;span aria-hidden&#x3D;&quot;true&quot;&gt;»&lt;/span&gt;
       &lt;/a&gt;
     &lt;/li&gt;
@@ -1264,7 +1297,7 @@ export class DataGridPaginationComponent implements OnInit, OnChanges {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div>  <ul class="pagination float-right">    <li [class.disabled]="currentPageNumber === 1 || !maxPageIndex">      <a href (click)="setCurrentPage(1, $event)" aria-label="Previous">        <span aria-hidden="true">«</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === 1 || !maxPageIndex">      <a        href        aria-label="Previous"        (click)="setCurrentPage(currentPageNumber - 1, $event)"      >        <span aria-hidden="true">‹</span>      </a>    </li>    <li      *ngFor="let index of range(pageStartNumber, pageEndNumber)"      [class.active]="currentPageNumber === index"    >      <a href (click)="setCurrentPage(index, $event)">        <span aria-hidden="true">{{ index }}</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === maxPageIndex || !maxPageIndex">      <a        href        (click)="setCurrentPage(currentPageNumber + 1, $event)"        aria-label="Last"      >        <span aria-hidden="true">›</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === maxPageIndex || !maxPageIndex">      <a href (click)="setCurrentPage(maxPageIndex, $event)" aria-label="Last">        <span aria-hidden="true">»</span>      </a>    </li>  </ul></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div>  <ul class="pagination float-right" [ngClass]="{ \'pagination-sm\': size == \'sm\', \'pagination-lg\': size == \'lg\' }">    <li [class.disabled]="currentPageNumber === 1 || !maxPageIndex" class="page-item">      <a href (click)="setCurrentPage(1, $event)" aria-label="Previous" class="page-link">        <span aria-hidden="true">«</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === 1 || !maxPageIndex" class="page-item">      <a        href        aria-label="Previous"        (click)="setCurrentPage(currentPageNumber - 1, $event)"        class="page-link">        <span aria-hidden="true">‹</span>      </a>    </li>    <li      *ngFor="let index of range(pageStartNumber, pageEndNumber)"      [class.active]="currentPageNumber === index"      class="page-item">      <a href (click)="setCurrentPage(index, $event)" class="page-link">        <span aria-hidden="true">{{ index }}</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === maxPageIndex || !maxPageIndex">      <a class="page-link"        href        (click)="setCurrentPage(currentPageNumber + 1, $event)"        aria-label="Last"      >        <span aria-hidden="true">›</span>      </a>    </li>    <li [class.disabled]="currentPageNumber === maxPageIndex || !maxPageIndex" class="page-item">      <a href (click)="setCurrentPage(maxPageIndex, $event)" aria-label="Last" class="page-link">        <span aria-hidden="true">»</span>      </a>    </li>  </ul></div></div>'
     var COMPONENTS = [{'name': 'AutoFormComponent', 'selector': 'ac-autoform'},{'name': 'DataGridComponent', 'selector': 'ac-datagrid'},{'name': 'DataGridPaginationComponent', 'selector': 'ac-datagrid-pagination'},{'name': 'EditorComponent', 'selector': 'ac-editor'},{'name': 'TreeViewComponent', 'selector': 'ac-tree'},{'name': 'TreeViewNodeComponent', 'selector': 'ac-treenode'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'DataGridPaginationComponent'};
