--- a/docs/documentation/components/EditorComponent.html
+++ b/docs/documentation/components/EditorComponent.html
@@ -583,7 +583,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>projects/svogv/src/lib/widgets/editors/editor.component.ts</code>
+    <code>projects/svogv/src/lib/widgets/editors/editor/editor.component.ts</code>
 </p>
 
     <p class="comment">
@@ -627,9 +627,16 @@
 
             <tr>
                 <td class="col-md-3">styles</td>
-                <td class="col-md-9"><code>input[type&#x3D;&quot;checkbox&quot;] { display: none; },input[type&#x3D;&quot;checkbox&quot;] + label:before { font-family: FontAwesome; },input[type&#x3D;&quot;checkbox&quot;] + label:before { content: &quot;\f096&quot;; },input[type&#x3D;&quot;checkbox&quot;]:checked + label:before { content: &quot;\f046&quot;; },input[type&#x3D;&quot;checkbox&quot;] + label {
-      display:inline-block; width:15px; height: 20px; margin: -1px 4px 0 0; vertical-align:middle; cursor: pointer;
-    }</code></td>
+                <td class="col-md-9"><code>input[type&#x3D;&quot;checkbox&quot;] { display: none; },input[type&#x3D;&quot;checkbox&quot;] + label:before { font-family: FontAwesome; },input[type&#x3D;&quot;checkbox&quot;] + label:before { content: &quot;\f096&quot;; },input[type&#x3D;&quot;checkbox&quot;]:checked + label:before { content: &quot;\f046&quot;; },
+      input[type&#x3D;&#x27;checkbox&#x27;] + label {
+        display: inline-block;
+        width: 15px;
+        height: 20px;
+        margin: -1px 4px 0 0;
+        vertical-align: middle;
+        cursor: pointer;
+      }
+    </code></td>
             </tr>
 
 
@@ -755,7 +762,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:86</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:92</a></div>
                                 </td>
                             </tr>
     
@@ -783,7 +790,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:54</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:60</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -805,7 +812,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:63</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:69</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -828,7 +835,7 @@ Otherwise the label is above the field. Default is <code>true</code>.</p>
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:50</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:56</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -851,7 +858,7 @@ Otherwise the label is above the field. Default is <code>true</code>.</p>
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:37</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:43</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -873,7 +880,7 @@ Otherwise the label is above the field. Default is <code>true</code>.</p>
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:33</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:39</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -897,7 +904,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:59</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:65</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -920,7 +927,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:25</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:31</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -942,7 +949,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:75</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:81</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -965,7 +972,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:41</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:47</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -987,7 +994,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:67</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:73</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1009,7 +1016,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:29</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:35</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1032,7 +1039,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:45</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:51</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1055,7 +1062,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:81</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:87</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1074,7 +1081,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                     </tr>
                             <tr>
                                 <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:71</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:77</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1106,7 +1113,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="96" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:96</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="102" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:102</a></div>
                                 </td>
                             </tr>
     
@@ -1176,7 +1183,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:92</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="98" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:98</a></div>
                                 </td>
                             </tr>
     
@@ -1237,7 +1244,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="109" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:109</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="115" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:115</a></div>
                                 </td>
                             </tr>
     
@@ -1270,7 +1277,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="163" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:163</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="169" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:169</a></div>
                                 </td>
                             </tr>
     
@@ -1343,7 +1350,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:86</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:92</a></div>
                                 </td>
                             </tr>
     
@@ -1372,7 +1379,7 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="84" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor.component.ts:84</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="90" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:90</a></div>
                                 </td>
                             </tr>
     
@@ -1397,14 +1404,20 @@ import { FormGroup } from &#x27;@angular/forms&#x27;;
     &#x27;input[type&#x3D;&quot;checkbox&quot;] + label:before { font-family: FontAwesome; }&#x27;,
     &#x27;input[type&#x3D;&quot;checkbox&quot;] + label:before { content: &quot;\\f096&quot;; }&#x27;,
     &#x27;input[type&#x3D;&quot;checkbox&quot;]:checked + label:before { content: &quot;\\f046&quot;; }&#x27;,
-    &#x60;input[type&#x3D;&quot;checkbox&quot;] + label {
-      display:inline-block; width:15px; height: 20px; margin: -1px 4px 0 0; vertical-align:middle; cursor: pointer;
-    }&#x60;,
+    &#x60;
+      input[type&#x3D;&#x27;checkbox&#x27;] + label {
+        display: inline-block;
+        width: 15px;
+        height: 20px;
+        margin: -1px 4px 0 0;
+        vertical-align: middle;
+        cursor: pointer;
+      }
+    &#x60;
   ],
   templateUrl: &#x27;./editor.component.html&#x27;
 }) //
 export class EditorComponent implements OnInit {
-
   /**
    * Field name
    */
@@ -1467,19 +1480,19 @@ export class EditorComponent implements OnInit {
   value: any;
 
   // additional values provided by TemplateHint decorator
-  params: { key: string, value: any }[];
+  params: { key: string; value: any }[];
 
   errors: Array&lt;string&gt;;
 
   constructor() {
-    this.params &#x3D; new Array&lt;{ key: string, value: any }&gt;();
+    this.params &#x3D; new Array&lt;{ key: string; value: any }&gt;();
   }
 
   getParams(key: string): any {
-    return this.first(this.params.filter((e) &#x3D;&gt; e.key &#x3D;&#x3D;&#x3D; key), 0);
+    return this.first(this.params.filter(e &#x3D;&gt; e.key &#x3D;&#x3D;&#x3D; key), 0);
   }
 
-  first(array: Array&lt;{ key: string, value: any }&gt;, n: number): any {
+  first(array: Array&lt;{ key: string; value: any }&gt;, n: number): any {
     if (array &#x3D;&#x3D; null) {
       return void 0;
     }
@@ -1508,7 +1521,7 @@ export class EditorComponent implements OnInit {
       if (typeof editorModel[this.name] &#x3D;&#x3D;&#x3D; &#x27;number&#x27;) {
         this.type &#x3D; &#x27;number&#x27;;
       }
-      if (editorModel[this.name] instanceof Date){
+      if (editorModel[this.name] instanceof Date) {
         this.type &#x3D; &#x27;calendar&#x27;;
       }
       // make an instance to read the properties
@@ -1529,9 +1542,9 @@ export class EditorComponent implements OnInit {
       }
       // templates
       if (editorModel[&#x60;__hasTemplateHint__${this.name}&#x60;]) {
-        this.type &#x3D; (&lt;string&gt;editorModel[&#x60;__templateHint__${this.name}&#x60;]).toLowerCase();
-        if (editorModel[&#x60;__templateHintParams__${this.name}&#x60;]) {
-          this.params &#x3D; (&lt;{ key: string, value: any }[]&gt;editorModel[&#x60;__templateHintParams__${this.name}&#x60;]);
+        this.type &#x3D; (&lt;string&gt;editorModel[&#x60;__templatehint__${this.name}&#x60;]).toLowerCase();
+        if (editorModel[&#x60;__templatehintParams__${this.name}&#x60;]) {
+          this.params &#x3D; &lt;{ key: string; value: any }[]&gt;editorModel[&#x60;__templatehintParams__${this.name}&#x60;];
         }
       }
 
@@ -1554,9 +1567,7 @@ export class EditorComponent implements OnInit {
       this.errors.push(error);
     }
   }
-
 }
-
 </code></pre>
     </div>
 
